# PythonTemplate

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/my_project.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_first_test.py
