[metadata]
name = my_project
description = A template for a Python project
author = Jonathan Arias Busto
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32, cygwin
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = my_project
install_requires = requests >= 2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
tfg_karont3 = py.typed

[flake8]
max-line-length = 160

[mypy]
ignore_missing_imports = True

